# cascadia-audio-win-mvp

./: .gitignore  README.md
.github/workflows/: tests.yml
avalonia/CascadiaAudioMvp/: App.axaml  App.axaml.cs  CascadiaAudioMvp.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs
avalonia/CascadiaAudioMvp.Tests/: AudioServiceTests.cs  CascadiaAudioMvp.Tests.csproj
avalonia/CascadiaAudioMvp/Properties/: AssemblyInfo.cs
avalonia/CascadiaAudioMvp/Services/: AudioService.cs  NativeAudio.cs
rust/: Cargo.toml
rust/src/: lib.rs
rust/tests/: native_smoke.rs
windows/: CascadiaAudioMvp.sln
windows/CascadiaAudioMvp/: App.xaml  App.xaml.cs  CascadiaAudioMvp.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
windows/CascadiaAudioMvp/Services/: AudioService.cs  NativeAudio.cs
